otlp: add OAuth2 to otlp_grpc and otlp_http outputs

--- a/docs/modules/components/pages/outputs/otlp_http.adoc
+++ b/docs/modules/components/pages/outputs/otlp_http.adoc
@@ -87,6 +87,13 @@ output:
       signing_method: ""
       claims: {}
       headers: {}
+    oauth2:
+      enabled: false
+      client_key: ""
+      client_secret: ""
+      token_url: ""
+      scopes: []
+      endpoint_params: {}
     max_in_flight: 64
 ```
 
@@ -122,6 +129,7 @@ Supports two content types:
 Supports multiple authentication methods:
 - Basic authentication
 - OAuth v1
+- OAuth v2
 - JWT
 
 
@@ -445,6 +453,83 @@ Add optional key/value headers to the JWT.
 *Type*: `object`
 
 *Default*: `{}`
+
+=== `oauth2`
+
+Allows you to specify open authentication via OAuth version 2 using the client credentials token flow.
+
+
+*Type*: `object`
+
+
+=== `oauth2.enabled`
+
+Whether to use OAuth version 2 in requests.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `oauth2.client_key`
+
+A value used to identify the client to the token provider.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `oauth2.client_secret`
+
+A secret used to establish ownership of the client key.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `oauth2.token_url`
+
+The URL of the token provider.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `oauth2.scopes`
+
+A list of optional requested permissions.
+
+
+*Type*: `array`
+
+*Default*: `[]`
+
+=== `oauth2.endpoint_params`
+
+A list of optional endpoint parameters, values should be arrays of strings.
+
+
+*Type*: `object`
+
+*Default*: `{}`
+
+```yml
+# Examples
+
+endpoint_params:
+  audience:
+    - https://example.com
+  resource:
+    - https://api.example.com
+```
 
 === `max_in_flight`
 
