--- a/docs/modules/components/pages/outputs/otlp_grpc.adoc
+++ b/docs/modules/components/pages/outputs/otlp_grpc.adoc
@@ -68,6 +68,13 @@ output:
         interval: 15s
         count: 9
       tcp_user_timeout: 0s
+    oauth2:
+      enabled: false
+      client_key: ""
+      client_secret: ""
+      token_url: ""
+      scopes: []
+      endpoint_params: {}
     max_in_flight: 64
 ```
 
@@ -85,6 +92,14 @@ Expects messages in Redpanda OTEL v1 protobuf format with metadata:
 
 Each batch must contain messages of the same signal type.
 The entire batch is converted to a single OTLP export request and sent via gRPC.
+
+## Authentication
+
+Supports multiple authentication methods:
+- Bearer token authentication (via auth_token field)
+- OAuth v2 (via oauth2 configuration block)
+
+Note: OAuth2 requires TLS to be enabled.
 
 
 == Fields
@@ -224,6 +239,83 @@ Maximum time to wait for acknowledgment of transmitted data before killing the c
 *Type*: `string`
 
 *Default*: `"0s"`
+
+=== `oauth2`
+
+Allows you to specify open authentication via OAuth version 2 using the client credentials token flow.
+
+
+*Type*: `object`
+
+
+=== `oauth2.enabled`
+
+Whether to use OAuth version 2 in requests.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `oauth2.client_key`
+
+A value used to identify the client to the token provider.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `oauth2.client_secret`
+
+A secret used to establish ownership of the client key.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `oauth2.token_url`
+
+The URL of the token provider.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `oauth2.scopes`
+
+A list of optional requested permissions.
+
+
+*Type*: `array`
+
+*Default*: `[]`
+
+=== `oauth2.endpoint_params`
+
+A list of optional endpoint parameters, values should be arrays of strings.
+
+
+*Type*: `object`
+
+*Default*: `{}`
+
+```yml
+# Examples
+
+endpoint_params:
+  audience:
+    - https://example.com
+  resource:
+    - https://api.example.com
+```
 
 === `max_in_flight`
 
